refactor: 자동차 경주 게임